--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="fundo">
+    <div class="conteudo" [class.fade-in]="animacao">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+            <div class="frase">{{frase}}</div>
+            <div class="autor">-{{autor}}</div>
+    </div>
+</div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-buttom (click)="solicitarfrase()">
+        <ion-icon name="refresh">
+
+        </ion-icon>
+    </ion-fab-buttom>
+</ion-fab>
